<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--PayHome-->
    <string name="pay_home_cash_coupon">代金券</string>
    <string name="pay_home_cash_coupon_default">不使用</string>
    <string name="pay_home_invoice">发票</string>
    <string name="pay_home_invoice_default">不支持开发票</string>
    <string name="pay_home_pay_type">支付方式</string>
    <string name="pay_home_pay_type_default">支付宝</string>
    <string name="pay_home_pay_amount">应付总额</string>
    <string name="pay_home_pay_protocol_default">本人同意并接受支付协议</string>
    <string name="pay_home_submit">提交订单</string>
    <!--PayHome-->

    <!--PayProtocol-->
    <string name="title_activity_pay_protocol">支付协议</string>
    <!--PayProtocol-->

    <!--PayType-->
    <string name="pay_type_wallet">钱包余额</string>
    <string name="pay_type_wechat">微信支付</string>
    <string name="pay_type_ali">支付宝</string>
    <!--PayType-->

    <!--PayCashCoupon-->
    <string name="pay_cash_coupon_dont_use_cash_coupon">不使用代金券</string>
    <string name="pay_cash_coupon_dont_achieve_doorsill">未达到使用门槛</string>
    <!--PayCashCoupon-->

    <!--WalletPay-->
    <string name="wallet_pay_finger_print_check_retry">验证失败</string>
    <string name="wallet_pay_finger_print_check_error">多次失败, 请重试</string>
    <string name="wallet_pay_finger_print_check_success">验证成功</string>
    <string name="wallet_pay_check_finger_print">验证指纹</string>
    <string name="wallet_pay_please_input_pay_password">请输入支付密码</string>
    <string name="wallet_pay_cancel_pay">操作已经取消。</string>
    <string name="wallet_pay_password_error">支付密码错误</string>
    <!--WalletPay-->

</resources>