<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:background="#f2f2f2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"/>

    <LinearLayout
        android:id="@+id/pay_home_cash_coupon_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:text="@string/pay_home_cash_coupon"
            android:textColor="#101010"
            android:textSize="14dp" />

        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/pay_home_cash_coupon"
            android:text="@string/pay_home_cash_coupon_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="14dp"
            android:textColor="#101010"
            android:textSize="14dp" />
        
        <ImageView
            android:src="@drawable/pay_home_right"
            android:layout_marginEnd="8dp"
            android:layout_gravity="center_vertical"
            android:layout_width="20dp"
            android:layout_height="20dp" />

    </LinearLayout>

    <View
        android:background="#f2f2f2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"/>

    <LinearLayout
        android:id="@+id/pay_home_invoice_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:text="@string/pay_home_invoice"
            android:textColor="#101010"
            android:textSize="14dp" />

        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/pay_home_invoice"
            android:text="@string/pay_home_invoice_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="14dp"
            android:textColor="#101010"
            android:textSize="14dp" />

        <ImageView
            android:src="@drawable/pay_home_right"
            android:layout_marginEnd="8dp"
            android:layout_gravity="center_vertical"
            android:layout_width="20dp"
            android:layout_height="20dp" />

    </LinearLayout>


    <View
        android:background="#f2f2f2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"/>

    <LinearLayout
        android:id="@+id/pay_home_pay_type_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:text="@string/pay_home_pay_type"
            android:textColor="#101010"
            android:textSize="14dp" />

        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/pay_home_pay_type"
            android:text="@string/pay_home_pay_type_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="14dp"
            android:textColor="#101010"
            android:textSize="14dp" />

        <ImageView
            android:src="@drawable/pay_home_right"
            android:layout_marginEnd="8dp"
            android:layout_gravity="center_vertical"
            android:layout_width="20dp"
            android:layout_height="20dp" />

    </LinearLayout>

    <View
        android:background="#f2f2f2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:text="@string/pay_home_pay_amount"
            android:textColor="#101010"
            android:textSize="14dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/pay_home_pay_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="33dp"
            android:layout_marginBottom="12dp"
            android:text="￥0.00"
            android:textColor="@color/colorPrimary"
            android:textSize="14dp" />

    </LinearLayout>

    <View
        android:background="#f2f2f2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"/>

    <LinearLayout
        android:id="@+id/pay_home_pay_protocol_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/pay_home_pay_protocol"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:textColor="#101010"
            android:textSize="14dp" />

        <TextView
            android:layout_marginStart="7dp"
            android:text="@string/pay_home_pay_protocol_default"
            android:textSize="12dp"
            android:textColor="#858585"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/pay_home_submit"
        android:text="@string/pay_home_submit"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="15dp"
        android:background="@drawable/pay_home_submit_able_bg"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

</LinearLayout>
